calico_versioned_docs/version-3.24/getting-started/kubernetes/helm.mdx
---
description: Install Calico on a Kubernetes cluster using Helm 3.
---

import variables from '@site/calico_versioned_docs/version-3.24/variables';
import CodeBlock from '@theme/CodeBlock';

# Install using Helm

## Big picture

Install {variables.prodname} on a Kubernetes cluster using Helm 3.

## Value

Helm charts are a way to package up an application for Kubernetes (similar to `apt` or `yum` for operating systems). Helm is also used by tools like ArgoCD to manage applications in a cluster, taking care of install, upgrade (and rollback if needed), etc.

## Before you begin

**Required**

- Install Helm 3
- Kubernetes cluster meets these requirements:
  - Kubernetes is installed _without_ a CNI plugin **OR** cluster is running a compatible CNI for {variables.prodname} to run in policy-only mode
  - x86-64, arm64, ppc64le, or s390x processors
  - RedHat Enterprise Linux 7.x+, CentOS 7.x+, Ubuntu 18.04+, or Debian 9.x+
- `kubeconfig` is configured to work with your cluster (check by running `kubectl get nodes`)
- {variables.prodname} can manage `cali` and `tunl` interfaces on the hosts.
  If NetworkManager is present on the hosts, refer to
  [Configure NetworkManager](../../operations/troubleshoot/troubleshooting.mdx#configure-networkmanager).

## Concepts

### Operator based installation

In this guide, you install the Tigera {variables.prodname} operator and custom resource definitions using the Helm 3 chart. The Tigera operator provides lifecycle management for {variables.prodname} exposed via the Kubernetes API defined as a custom resource definition.

## How to

### Download the Helm chart

1. Add the {variables.prodname} helm repo:

```bash
helm repo add projectcalico https://docs.tigera.io/calico/charts
```

### Customize the Helm chart

If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.

1. If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), set the `kubernetesProvider` as described in the [Installation reference](../../reference/installation/api.mdx#operator.tigera.io/v1.Provider). For example:

   ```
   echo '{ installation: {kubernetesProvider: EKS }}' > values.yaml
   ```

   For Azure AKS cluster with no Kubernetes CNI pre-installed, create `values.yaml` with the following command:

   ```
   cat > values.yaml <<EOF
   installation:
     kubernetesProvider: AKS
     cni:
       type: Calico
     calicoNetwork:
       bgp: Disabled
       ipPools:
       - cidr: 10.244.0.0/16
         encapsulation: VXLAN
   EOF
   ```

1. Add any other customizations you require to `values.yaml`. You might like to refer to the [helm docs](https://helm.sh/docs/) or run

   <CodeBlock language=''>
   helm show values projectcalico/tigera-operator --version {variables.releaseTitle}
   </CodeBlock>

   to see the values that can be customized in the chart.

### Install {variables.prodname}

1. Create the `tigera-operator` namespace.

   ```
   kubectl create namespace tigera-operator
   ```

1. Install the Tigera {variables.prodname} operator and custom resource definitions using the Helm chart:

   <CodeBlock language=''>
   helm install {variables.prodnamedash} projectcalico/tigera-operator --version {variables.releaseTitle} --namespace tigera-operator
   </CodeBlock>

   or if you created a `values.yaml` above:

   <CodeBlock language=''>
   helm install {variables.prodnamedash} projectcalico/tigera-operator --version {variables.releaseTitle} -f values.yaml --namespace tigera-operator
   </CodeBlock>

1. Confirm that all of the pods are running with the following command.

   ```
   watch kubectl get pods -n calico-system
   ```

   Wait until each pod has the `STATUS` of `Running`.

   :::note

   The Tigera operator installs resources in the `calico-system` namespace. Other install methods may use
   the `kube-system` namespace instead.

   :::

Congratulations! You have now installed {variables.prodname} using the Helm 3 chart.

## Next steps

**Required**

- [Install and configure calicoctl](../../operations/calicoctl/install.mdx)

**Recommended tutorials**

- [Secure a simple application using the Kubernetes NetworkPolicy API](../../network-policy/get-started/kubernetes-policy/kubernetes-policy-basic.mdx)
- [Control ingress and egress traffic using the Kubernetes NetworkPolicy API](../../network-policy/get-started/kubernetes-policy/kubernetes-policy-advanced.mdx)
- [Run a tutorial that shows blocked and allowed connections in real time](../../network-policy/get-started/kubernetes-policy/kubernetes-demo.mdx)
